# test-operational-control-with-icub-gmm

./: MIR-Test.sh  README.md
app/: ymanager.ini
app/scripts/: app.xml
src/: CMakeLists.txt  main.cpp
src/makeItRoll/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  MyFixManager.cpp  MyFixManager.h  MyTest.cpp  MyTest.h  result.txt
suits/: MIR-TestSuit.xml  result.txt  ymanager.ini
suits/fixtures/: MIR-fix1.xml  MIR-fix2.xml  icubsim-MIR-fixture.xml
